overlapping panels fixed

--- a/src/Dashboard.WebApi/developersDashboardFrontEnd/src/app/panel-host/host-panel.shared.css
+++ b/src/Dashboard.WebApi/developersDashboardFrontEnd/src/app/panel-host/host-panel.shared.css
@@ -1,6 +1,6 @@
 mat-card {
     margin: 5px;
-    height: 100%;
+    height: 95%;
     padding: 5px;
 
     padding: 0 10px 10px;
