--- a/src/Dashboard.WebApi/developersDashboardFrontEnd/src/styles.css
+++ b/src/Dashboard.WebApi/developersDashboardFrontEnd/src/styles.css
@@ -1,2 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+
+body {
+    overflow-x: hidden; 
+    max-height: 100%;
+}
+
+html, body {
+    height: 100%;
+}
